--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -48,13 +48,12 @@
 		
  
   <br><button class='btn btn-lg btn-primary btn-block' type='submit'>Log in</button>
-
       </form>
 	   <form class="form-signin">
         <h2 class="form-signin-heading text-muted">Login als gast</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>	<br>
-		<a href='logingast.html'><button class='btn btn-lg btn-warning btn-block' type='submit'>Login als gast</button></a>
+        <label for="inputguest" class="sr-only">Gebruikersnaam</label>
+        <input type="text" id="inputguest" class="form-control" placeholder="Gebruikersnaam" required>	<br>
+		<button class='btn btn-lg btn-warning btn-block' type='submit'>Login als gast</button>
 
       </form>
 
