--- a/Bootstrap/berichten.html
+++ b/Bootstrap/berichten.html
@@ -44,7 +44,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    < <a class="navbar-brand" href="https://stenden.com">
+                    <a class="navbar-brand" href="https://stenden.com">
                     <img src="images/stenden_logo1.png" alt="Stenden Logo">
                 </a>
                 </div>
@@ -53,6 +53,7 @@
                         <li><a href="backend/student/home.html">Instellingen</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="#">English</a></li>
+						<li><a href="uitlogscherm.html">Uitloggen</a></li>
                     </ul>
         </div>
       </div>
@@ -63,14 +64,14 @@
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-                        <li><a href="portfolio.html">Mijn Portfolio</a></li>
-						<li class="active"><a href="projecten.html">Mijn Projecten <span class="sr-only">(current)</span></a></li>
+						<li><a href="portfolio.html">Mijn Portfolio</a></li>
+                        <li><a href="projecten.html">Mijn Projecten</a></li>
 						<li><a href="cijfers.html">Mijn Cijferlijst</a></li>
-                        <li><a href="gastenboek.html">Gastenboek</a></li>
+						<li class="active"><a href="gastenboek.html">Gastenboek <span class="sr-only">(current)</span></a></li>
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    <h1 class="page-header">Mijn Projecten</h1>
+                    <h1 class="page-header">Berichten</h1>
                 </div>
             </div></div>  
 
@@ -78,41 +79,41 @@
         <div class="container">
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
                 <div class="panel panel-default">
-                    
                     <div class="bs-callout bs-callout-danger">
-                        <h4>Projecten</h4>
-                        <ul class="list-group">
-                            <a class="list-group-item inactive-link" href="#">
-                                <h4 class="list-group-item-heading">
-                                    Professionele Website 
-                                </h4>
-                                <p class="list-group-item-text">
-                                    Lorem ipsum dolor sit amet, ea vel prima adhuc, scripta liberavisse ea quo, te vel vidit mollis complectitur. Quis verear mel ne. Munere vituperata vis cu, 
-                                    te pri duis timeam scaevola, nam postea diceret ne. Cum ex quod aliquip mediocritatem, mei habemus persecuti mediocritatem ei.
-                                </p>
-                            </a>
-                            <a class="list-group-item inactive-link" href="#">
-                                <h4 class="list-group-item-heading">Professionele Portfolio</h4>
-                                <p class="list-group-item-text">
-                                    Lorem ipsum dolor sit amet, ea vel prima adhuc, scripta liberavisse ea quo, te vel vidit mollis complectitur. 
-                                    Quis verear mel ne. Munere vituperata vis cu, te pri duis timeam scaevola, 
-                                    nam postea diceret ne. Cum ex quod aliquip mediocritatem, mei habemus persecuti mediocritatem ei.
-                                </p>
-                                <ul>
-                                    <li>
-                                        Lorem ipsum dolor sit amet, ea vel prima adhuc, scripta liberavisse ea quo, te vel vidit mollis complectitur. 
-                                        Quis verear mel ne. Munere vituperata vis cu, te pri duis timeam scaevola, 
-                                        nam postea diceret ne. Cum ex quod aliquip mediocritatem, mei habemus persecuti mediocritatem ei.
-                                    </li>
-                                    <li>
-                                        Lorem ipsum dolor sit amet, ea vel prima adhuc, scripta liberavisse ea quo, te vel vidit mollis complectitur. 
-                                        Quis verear mel ne. Munere vituperata vis cu, te pri duis timeam scaevola, 
-                                        nam postea diceret ne. Cum ex quod aliquip mediocritatem, mei habemus persecuti mediocritatem ei.
-                                    </li>
-                                </ul>
-                                <p></p>
-                            </a>
-                        </ul>
+                        <p>
+    <div class="row">
+        <div class="col-lg-12">
+            <table class="table" id="table">
+                <thead>
+                    <tr>
+                        <th>Datum</th>
+                        <th>Naam</th>
+                        <th>Bericht</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>12:21 13-1-2017</td>
+                        <td>Dennis Kramer</td>
+                        <td>Test1</td>
+                    </tr>
+                    <tr>
+                        <td>12:22 13-1-2017</td>
+                        <td>Dennis Kramer</td>
+                        <td>Test2</td>
+                    </tr>
+                    <tr>
+                        <td>12:23 13-1-2017</td>
+                        <td>Dennis Kramer</td>
+                        <td>Test3</td>
+                    </tr>
+                </tbody>
+            </table>
+            <hr>
+        </div>
+    </div>
+<script src="//rawgithub.com/stidges/jquery-searchable/master/dist/jquery.searchable-1.0.0.min.js"></script>
+                        </p>
                     </div>
                     
             </div>
