--- a/Bootstrap/Uitlogscherm.html
+++ b/Bootstrap/Uitlogscherm.html
@@ -42,9 +42,9 @@
                     <h2 class="form-signin-heading text-muted">U bent succesvol uitgelogd!</h2>
 
                     <a href="index.html">Terug naar de website</a>
+                </form>
             </div>
-        </div>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
+            <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+            <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
     </body>
 </html>
