--- a/Bootstrap/overzicht.html
+++ b/Bootstrap/overzicht.html
@@ -39,87 +39,87 @@
         <div class="container">
             <div class="jumbotron2">
 
-<div class="row">
-		<div class="col-md-2 col-sm-6 col-xs-6">
-            <div class="panel panel-default">
-                <div class="panel-body">                    
-                     <img class="img-circle img-responsive" alt="Dennis" src="dist/css/images/profileblank.png">
-                    <p><a href="portfolio.html"> Dennis Kramer </a></p>
-                </div>
-            </div>
-        </div>
-		
-		
-		<div class="col-md-2 col-sm-6 col-xs-6">
-            <div class="panel panel-default">
-                <div class="panel-body">                    
-                     <img class="img-circle img-responsive" alt="Jefrey" src="dist/css/images/profileblank.png">
-                    <p><a href="portfolio.html"> Jefrey Meijer </a></p>
-                </div>
-            </div>
-        </div>
-
-		<div class="col-md-2 col-sm-6 col-xs-6">
-            <div class="panel panel-default">
-                <div class="panel-body">                    
-                     <img class="img-circle img-responsive" alt="Leon" src="dist/css/images/profileblank.png">
-                    <p><a href="portfolio.html"> Leon Hans </a></p>
-                </div>
-            </div>
-        </div>
-
-		<div class="col-md-2 col-sm-6 col-xs-6">
-            <div class="panel panel-default">
-                <div class="panel-body">                    
-                     <img class="img-circle img-responsive" alt="Siem" src="dist/css/images/profileblank.png">
-                    <p><a href="portfolio.html"> Siem Schippers </a></p>
-                </div>
-            </div>
-        </div>
-		
-		<div class="col-md-2 col-sm-6 col-xs-6">
-            <div class="panel panel-default">
-                <div class="panel-body">                    
-                     <img class="img-circle img-responsive" alt="Tom" src="dist/css/images/profileblank.png">
-                    <p><a href="portfolio.html"> Tom Verra </a></p>
-                </div>
-            </div>
-        </div>	
-		
-		<div class="col-md-2 col-sm-6 col-xs-6">
-            <div class="panel panel-default">
-                <div class="panel-body">                    
-                     <img class="img-circle img-responsive" alt="Randy" src="dist/css/images/profileblank.png">
-                    <p><a href="portfolio.html"> Randy Dijkshoorn </a></p>
-                </div>
-            </div>
-        </div>
-		
-			<div class="col-md-2 col-sm-6 col-xs-6">
-            <div class="panel panel-default">
-                <div class="panel-body">                    
-                     <img class="img-circle img-responsive" alt="Fekke" src="dist/css/images/profileblank.png">
-                    <p><a href="portfolio.html"> Fekke Fekkes </a></p>
-                </div>
-            </div>
-        </div>
-					<div class="col-md-2 col-sm-6 col-xs-6">
-            <div class="panel panel-default">
-                <div class="panel-body">                    
-                     <img class="img-circle img-responsive" alt="Chiel" src="dist/css/images/profileblank.png">
-                    <p><a href="portfolio.html"> Chiel Timmermans </a></p>
-                </div>
-            </div>
-        </div>
-		
-		
- 
-				
-
-                </div></div> <!-- /container -->
+                <div class="row">
+                    <div class="col-md-2 col-sm-6 col-xs-6">
+                        <div class="panel panel-default">
+                            <div class="panel-body">                    
+                                <img class="img-circle img-responsive" alt="Dennis" src="dist/css/images/profileblank.png">
+                                <p><a href="portfolio.html"> Dennis Kramer </a></p>
+                            </div>
+                        </div>
+                    </div>
 
 
-            <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-            <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
+                    <div class="col-md-2 col-sm-6 col-xs-6">
+                        <div class="panel panel-default">
+                            <div class="panel-body">                    
+                                <img class="img-circle img-responsive" alt="Jefrey" src="dist/css/images/profileblank.png">
+                                <p><a href="portfolio.html"> Jefrey Meijer </a></p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-2 col-sm-6 col-xs-6">
+                        <div class="panel panel-default">
+                            <div class="panel-body">                    
+                                <img class="img-circle img-responsive" alt="Leon" src="dist/css/images/profileblank.png">
+                                <p><a href="portfolio.html"> Leon Hans </a></p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-2 col-sm-6 col-xs-6">
+                        <div class="panel panel-default">
+                            <div class="panel-body">                    
+                                <img class="img-circle img-responsive" alt="Siem" src="dist/css/images/profileblank.png">
+                                <p><a href="portfolio.html"> Siem Schippers </a></p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-2 col-sm-6 col-xs-6">
+                        <div class="panel panel-default">
+                            <div class="panel-body">                    
+                                <img class="img-circle img-responsive" alt="Tom" src="dist/css/images/profileblank.png">
+                                <p><a href="portfolio.html"> Tom Verra </a></p>
+                            </div>
+                        </div>
+                    </div>	
+
+                    <div class="col-md-2 col-sm-6 col-xs-6">
+                        <div class="panel panel-default">
+                            <div class="panel-body">                    
+                                <img class="img-circle img-responsive" alt="Randy" src="dist/css/images/profileblank.png">
+                                <p><a href="portfolio.html"> Randy Dijkshoorn </a></p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-2 col-sm-6 col-xs-6">
+                        <div class="panel panel-default">
+                            <div class="panel-body">                    
+                                <img class="img-circle img-responsive" alt="Fekke" src="dist/css/images/profileblank.png">
+                                <p><a href="portfolio.html"> Fekke Fekkes </a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2 col-sm-6 col-xs-6">
+                        <div class="panel panel-default">
+                            <div class="panel-body">                    
+                                <img class="img-circle img-responsive" alt="Chiel" src="dist/css/images/profileblank.png">
+                                <p><a href="portfolio.html"> Chiel Timmermans </a></p>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+
+                </div></div></div> <!-- /container -->
+
+
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
     </body>
 </html>
