--- a/Bootstrap/gastenboek.html
+++ b/Bootstrap/gastenboek.html
@@ -10,8 +10,8 @@
         <link rel="icon" href="dist/css/images/favicon.ico">
 
         <title>Portfolio | Stenden Hogeschool</title>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
         <!-- Bootstrap core CSS -->
         <link href="dist/css/bootstrap.min.css" rel="stylesheet">
@@ -45,29 +45,29 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="https://stenden.com">
-                    <img src="images/stenden_logo1.png" alt="Stenden Logo">
-                </a>
+                        <img src="images/stenden_logo1.png" alt="Stenden Logo">
+                    </a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="backend/student/home.html">Instellingen</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="#">English</a></li>
-						<li><a href="uitlogscherm.html">Uitloggen</a></li>
+                        <li><a href="uitlogscherm.html">Uitloggen</a></li>
                     </ul>
-        </div>
-      </div>
-    </nav>
+                </div>
+            </div>
+        </nav>
 
 
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
-						<li><a href="portfolio.html">Mijn Portfolio</a></li>
+                        <li><a href="portfolio.html">Mijn Portfolio</a></li>
                         <li><a href="projecten.html">Mijn Projecten</a></li>
-						<li><a href="cijfers.html">Mijn Cijferlijst</a></li>
-						<li class="active"><a href="gastenboek.html">Gastenboek <span class="sr-only">(current)</span></a></li>
+                        <li><a href="cijfers.html">Mijn Cijferlijst</a></li>
+                        <li class="active"><a href="gastenboek.html">Gastenboek <span class="sr-only">(current)</span></a></li>
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
@@ -79,39 +79,38 @@
         <div class="container">
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
                 <div class="panel panel-default">
-                    
+
                     <div class="bs-callout bs-callout-danger">
                         <p>
                         <div class="form-area">  
-        <form role="form">
-    				<div class="form-group">
-						<input type="text" class="form-control" id="name" name="name" placeholder="Naam" required>
-					</div>
-                    <div class="form-group">
-                    <textarea class="form-control" type="textarea" id="message" placeholder="Vul hier je bericht in" maxlength="140" rows="7"></textarea>				
+                            <form>
+                                <div class="form-group">
+                                    <input type="text" class="form-control" id="name" name="name" placeholder="Naam" required>
+                                </div>
+                                <div class="form-group">
+                                    <textarea class="form-control" id="message" placeholder="Vul hier je bericht in" maxlength="140" rows="7"></textarea>				
+                                </div>
+                                <div class="form-group">
+                                    <p><button type="button" id="submit" name="submit" class="btn btn-primary pull-middle">Submit</button></p>
+                                </div>
+                            </form>
+                        </div>
+                        <a href="berichten.html">Bekijk berichten</a>
                     </div>
-					<div class="form-group">
-					<p><button type="button" id="submit" name="submit" class="btn btn-primary pull-middle">Submit</button></p>
-					</div>
-        </form>
-    </div>
-	<a href="berichten.html">Bekijk berichten</a>
-                        </p>
-                    </div>
-                    
+
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="../../assets/js/vendor/holder.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-</body>
+        <!-- Bootstrap core JavaScript
+        ================================================== -->
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+        <script src="../../dist/js/bootstrap.min.js"></script>
+        <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+        <script src="../../assets/js/vendor/holder.min.js"></script>
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+        <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    </body>
 </html>
