--- a/Bootstrap/cijfers.html
+++ b/Bootstrap/cijfers.html
@@ -71,7 +71,7 @@
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    <h1 class="page-header">Cijfers</h1>
+                    <h1 class="page-header">Mijn Cijferlijst</h1>
                 </div>
             </div></div>  
 
@@ -80,30 +80,30 @@
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
                 <div class="panel panel-default">
                     <div class="bs-callout bs-callout-danger">
-                        <P>
-                        <div class="form-area">
-                            <table class="table table-striped table-responsive ">
+                            <table class="table table-responsive">
                                 <thead>
                                     <tr>
-                                        <th>Code</th>
-                                        <th>Studieonderdelen</th>
-                                        <th>Cijfers</th>
+                                        <th>Code en Studieonderdeel</th>
+                                        <th>Datum</th>
+                                        <th>Aantal EC</th>
+                                        <th>Cijfer</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>OIIM</td>
-                                        <td>Informatiemanagement</td>
-                                        <td> 3.7</td>
+                                        <td>OIPHP1 Inleiding Programmeren in PHP</td>
+                                        <td>09-11-2016</td>
+                                        <td>3</td>
+                                        <td>6.2</td>
                                     </tr>
                                     <tr>
-                                        <td>OIDGD1</td>
-                                        <td>Digital Graphic Design 1</td>
-                                        <td> 10 </td>
+                                        <td>OIXH (X)HTML en CSS</td>
+                                        <td>09-11-2016</td>
+                                        <td>3</td>
+                                        <td>7.2</td>
                                     </tr>
                                 </tbody>
                             </table>
-                        </div>
                     </div>
 
                 </div>
