--- a/Bootstrap/backend/docent/invoercijfers.html
+++ b/Bootstrap/backend/docent/invoercijfers.html
@@ -78,45 +78,45 @@
                             <table class="table table-striped table-responsive ">
                                 <thead>
                                     <tr>
-                                        <th>Code</th>
-                                        <th>Studieonderdelen</th>
-                                        <th>Cijfers</th>
+                                        <th>Code en Studieonderdeel</th>
+                                        <th>Datum</th>
+                                        <th>Aantal EC</th>
+                                        <th>Cijfer</th>
                                         <th>Aanpassen</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>OIIM</td>
-                                        <td>Informatiemanagement</td>
-                                        <td> 3.7</td>
-                                        <td> <a href="aanpassen.html">wijzigen</a></td>
+                                        <td>OIPHP1 Inleiding Programmeren in PHP</td>
+                                        <td>09-11-2016</td>
+                                        <td>3</td>
+                                        <td>6.2</td>
+                                        <td> <a href="aanpassen.html">Wijzig</a></td>
                                     </tr>
                                     <tr>
-                                        <td>OIDGD1</td>
-                                        <td>Digital Graphic Design 1</td>
-                                        <td> 10 </td>
-                                        <td> <a href="aanpassen.html">wijzigen</a></td>
+                                        <td>OIXH (X)HTML en CSS</td>
+                                        <td>09-11-2016</td>
+                                        <td>3</td>
+                                        <td>7.2</td>
+                                        <td> <a href="aanpassen.html">Wijzig</a></td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
-                        </p> 
                         <p> <a href="toevoegen.html"> Klik hier om een cijfer toe te voegen  </a> </p>
                     </div>
-                    </p>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="../../assets/js/vendor/holder.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-</body>
+        <!-- Bootstrap core JavaScript
+        ================================================== -->
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+        <script src="../../dist/js/bootstrap.min.js"></script>
+        <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+        <script src="../../assets/js/vendor/holder.min.js"></script>
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+        <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    </body>
 </html>
