--- a/Bootstrap/backend/docent/toevoegen.html
+++ b/Bootstrap/backend/docent/toevoegen.html
@@ -92,7 +92,7 @@
                                 <div class="form-group">
                                     <label class="col-md-4 control-label" for="textinput">Cijfer</label>  
                                     <div class="col-md-4">
-                                        <input id="textinput" name="cijfer" type="number" placeholder="cijfer" class="form-control input-md">
+                                        <input id="textinput" name="cijfer" type="number" step="0.01" min="0" placeholder="cijfer" class="form-control input-md">
                                     </div>
                                 </div>
                                 <div class="form-group">
