--- a/Bootstrap/backend/docent/beoordeel.html
+++ b/Bootstrap/backend/docent/beoordeel.html
@@ -89,7 +89,7 @@
                                         <input id="textinput" name="project" type="text" placeholder="Naam van project" class="form-control input-md">
                                     </div>
                                 </div>
-								<div class="form-group">
+                                <div class="form-group">
                                     <label class="col-md-4 control-label" for="textinput">Aantal EC</label>  
                                     <div class="col-md-4">
                                         <input id="textinput" name="ec" type="number" placeholder="Aantal EC" class="form-control input-md">
@@ -99,6 +99,12 @@
                                     <label class="col-md-4 control-label" for="textinput">Cijfer</label>  
                                     <div class="col-md-4">
                                         <input id="textinput" name="cijfer" type="number"  step="0.01" min="0" placeholder="Cijfer" class="form-control input-md">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-md-4 control-label" for="textarea">Opmerkingen</label>  
+                                    <div class="col-md-4">
+                                        <textarea name="comment" required rows="10" cols="32"></textarea>
                                     </div>
                                 </div>
                                 <div class="form-group">
